// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextStyled /> should render the component with different props 1`] = `
<span
  className="TextStyled-bFnujI kulPHn"
  color="#000"
  fontFamily="Times New Roman"
  fontSize="mega"
>
  Corinthians!
</span>
`;

exports[`<TextStyled /> should render the component with the default props 1`] = `
<span
  className="TextStyled-bFnujI cnlzTh"
>
  Corinthians!
</span>
`;
